--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,6 @@
     <title>My Task Board - Project 1</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Kalam|Lobster" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="project1.css">
@@ -19,15 +18,15 @@
     <div id="formadd">
         <input type="text" id="titleform" autofocus placeholder="Title" maxlength="15">
         <br>
-        <textarea rows="4" id="noteform" style="resize: none" placeholder="Note"></textarea>
+        <textarea rows="3" id="noteform" style="resize: none" placeholder="Note"></textarea>
         <br>
         <div id="dhc">
             <div><label for="dateform">Date: <input type="date" name="" id="dateform" max="2222-12-31"></label></div>
             <div><label for="timeform">Time: <input type="time" name="" id="timeform"></label></div>
         </div>
         <div id="divbuttons">
-            <button class="btn btn-primary" onclick="AddMemo()">Add</button>
-            <button class="btn btn-secondary" onclick="ClearForm()">Clear</button>
+            <button class="btn btn-primary" onclick="AddMemo()" title="Add task">Add</button>
+            <button class="btn btn-secondary" onclick="ClearForm()" title="clear the form">Clear</button>
         </div>
     </div>
     <br>
